force-app/main/default/objects/False_Synchronization__c/False_Synchronization__c.object-meta.xml
<CustomObject>
    <description>Для зберігання інформації рекордів, які не пройшли синхронізацію з ERP</description>
    <label>False Synchronization</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>False Synchro Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>False Synchronizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>