force-app/main/default/objects/False_Synchronization__c/fields/Json_Text__c.field-meta.xml
<CustomField>
    <fullName>Json_Text__c</fullName>
    <description>Json текст ,який не відправився при синхронізації з ERP</description>
    <label>Json Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>