force-app/main/default/objects/False_Synchronization__c/fields/Method_name__c.field-meta.xml
<CustomField>
    <fullName>Method_name__c</fullName>
    <label>Method name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>