force-app/main/default/objects/False_Synchronization__c/fields/Record_id__c.field-meta.xml
<CustomField>
    <fullName>Record_id__c</fullName>
    <label>Record id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>