force-app/main/default/objects/False_Synchronization__c/fields/Resended__c.field-meta.xml
<CustomField>
    <fullName>Resended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Поле-контроль при повторній синхронізації рекорду</description>
    <label>Resended</label>
    <type>Checkbox</type>
</CustomField>